# nfe-simulada

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/application/schemas/: nfe.py
app/domain/entities/: nfe.py
app/domain/enums/: nfe_status.py
app/infrastructure/db/: init_db.py  models.py  session.py
app/presentation/routes/: nfe.py
app/presentation/streamlit/: app.py
infra/docker/: Dockerfile
infra/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
